...
    <string name="tf_login_email_hint">Introduce tu email…</string>
    <string name="tf_login_password_hint">Introduce tu contraseña…</string>
    <string name="tv_login_email">Email:</string>
    <string name="tv_login_password">Contraseña:</string>
    <string name="b_login">INICIAR SESIÓN</string>
    <string name="web_client_id">763236116994-60rbnod6u9420llf9athned097a7jlrp.apps.googleusercontent.com</string>
    <string name="emptyFieldsLoginOrRegisterMessage">Se deben cumplimentar todos los campos</string>
    <string name="accept">Aceptar</string>
    <string name="userNotFoundMessage">Las credenciales no coinciden con ningún usuario</string>
    <string name="signInWithGoogleWasNotPossible">No se pudo iniciar sesión con su cuenta de Google</string>
    <string name="signOutTitle">Cerrar sesión</string>
    <string name="signInTitle">Iniciar sesión</string>
    <string name="linkRegister">¿No tienes cuenta? Regístrate</string>
    <string name="b_register">REGISTRARSE</string>
    <string name="registerTitle">Registrarse</string>
    <string name="registerFail">Ya existe en el sistema un usuario con el mismo email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="password_length_insufficient">La contraseña debe tener 8 caracteres como mínimo</string>
    <string name="alarmsFragmentTitle">Alarmas</string>
    <string name="newAlarm">Crear alarma</string>
    <string name="next">SIGUIENTE</string>
    <string name="last">ANTERIOR</string>
    <string name="tvPillQuantity">Número de pastillas: </string>
    <string-array name="pill_quantity_array">
...
    <string name="medicineNameHint">"Nombre: "</string>
    <string name="tvMedicineDescriptionLabel">"Descripción: "</string>
    <string name="tvSecondaryEffects">Efectos secundarios: </string>
    <string name="bCrearMedicamento">Crear medicamento</string>
    <string name="emptyFieldsMedicineCreation">Se debe asignar un nombre y una descripción al nuevo medicamento</string>
    <string name="tvIsUserDoctor">¿Es usted médico?</string>
    <string name="no_upper_cases_at_email">El email no puede contener ninguna mayúscula</string>
    <string name="mililitres">Mililitros: </string>
    <string name="packet">Número de sobres: </string>
    <string name="pill">Número de pastillas: </string>
    <string name="tvMililitres">Mililitros</string>
    <string name="tvPacket">Sobres</string>
    <string name="tvPill">Pastillas</string>
...
